--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cloudfunction-template",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "devDependencies": {
     "@google-cloud/functions-framework": "3.1.1",
     "@swc-node/jest": "1.5.2",
@@ -15,13 +15,12 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-jest": "26.1.5",
     "eslint-plugin-prettier": "4.0.0",
-    "esmon": "2.0.1",
     "jest": "28.1.0",
     "prettier": "2.6.2",
     "typescript": "4.6.4"
   },
   "scripts": {
-    "build": "esbuild --bundle --minify --sourcemap --outdir=./dist/ --platform=node --target=node16 --analyze ./src/index.ts",
+    "build": "esbuild --bundle --minify --sourcemap --outdir=./dist/ --external:./node_modules/* --platform=node --target=node16 --analyze ./src/index.ts",
     "test": "jest"
   },
   "repository": {
